--- a/concept.html
+++ b/concept.html
@@ -67,7 +67,7 @@ En gros tout ce qu'on veut c'est s'éclater !</p>
                     <center><div>
 
                      <a href="./work.html" title="" class="black-image-project-hover">
-                    <img src="./assets/images/photoprincipale.png" position=center width= 60% alt="" class="img-responsive">  </a> 
+                    <img src="./assets/images/sanstabou1.jpg" position=center width= 60% alt="" class="img-responsive">  </a> 
                     </div></center>
                     <div class="text-center">
                       <h4>001</h4>
