--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          sanstabou@gmail.io
+                          sanstabouparis@gmail.com
                         </li>
                         <li>
                           <span class="fa-icon">
@@ -98,12 +98,8 @@
                       <a href="https://www.facebook.com/sanstabouparis/" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
+                      
+                 
 
                     </div>
                   </div>
