--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="img-profil col-xs-12 col-md-6">
-                  <img src="./assets/images/oscar.jpg" class="img-responsive" alt=""></br>
+                  <img src="./assets/images/oscar.png" class="img-responsive" alt=""></br>
                  
                 </div>
                 <div class="col-xs-12 col-md-6">
