--- a/concept.html
+++ b/concept.html
@@ -56,10 +56,12 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">02 : Concept</h1>
-          <p>Deux potes qui en on marre du mauvais son dans la plupart des boites parisiennes. On a donc décidé de prendre les choses en main, et nous avons créé le collectif "Sans Tabou" pour passer des bonnes soirées pleine de groove ! Qu'est ce qu'on écoute ? 
-De la disco, de la house, de la funk, bref tu auras compris le mood. 
-On essaye de dénicher des petits DJ avec des répertoires hors normes ! 
-En gros tout ce qu'on veut c'est s'éclater !</p>
+          <p>Deux potes, qui en ont marre du mauvais son dans la plupart des boites parisiennes.
+           On a donc décidé de prendre les choses en main, et nous avons créé le collectif "Sans Tabou", 
+           histoire de passer des bonnes soirées pleine de groove ! Qu'est-ce qu'on écoute ? 
+           De la disco, de la house, de la funk, bref tu auras compris le mood. 
+           On essaye de dénicher des petits DJ avec des répertoires hors normes !
+           En gros tout ce qu'on veut, c'est s'éclater ! </p>
         </div>
       </div>
       <div class="col-md-12">   
