--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="text-content">
               <h1>Hello,<br>
                 <span id="typed-strings">
-                  <span>Nous sommes Robyn et Oscar</span>
+                  <span>Nous sommes Oscar et Robyn</span>
                   <span>Nous sommes deux potes</span>
                   <span>Nous sommes Sans Tabou</span>
                 </span>
