--- a/work.html
+++ b/work.html
@@ -69,7 +69,7 @@
       </div>
 
     <center>  
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/_g8rKNuIBLg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/_g8rKNuIBLg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </center>
 
 <footer class="footer-container text-center">
